--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "editor.fontFamily": "Consolas",
-    "editor.fontSize": 16
+    "terminal.integrated.fontFamily": "Meslo LG M for Powerline",
+    "terminal.integrated.fontSize": 14,
+    "editor.fontSize": 14
 }
