--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "editor.fontFamily": "Consolas",
     "terminal.integrated.fontFamily": "Meslo LG M for Powerline",
     "terminal.integrated.fontSize": 14,
-    "editor.fontSize": 14
+    "editor.fontSize": 14,
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
